- ODEDynamics: New option use_quick_step (patch 2977479). This can be used
  to select whether the ODE quickStep() or the step() method should be
  used for the simulation.
- The viewer tool window is now resizable (patch 2977469).
- New module mayaiff: This is almost identical to the previous mayabinary
  module except that it can read any IFF file. 

Bug fixes/enhancements:

- pointcloud: readDataPoints() didn't work in Python 2.x on 64bit systems.
- Shaders: Some of the RenderMan shaders were using variable names that are
  now reserved keywords. Those variables have been renamed.
- mayaascii: Added support for the "relationship" MEL command that can appear
  in .ma files.
- cgtypes: Bugfix: slerp() could produce NaNs when the magnitude of the input
  quats were slightly larger than 1 (bug #3377718).
- cgtypes: In the light version of cgkit, the quat.fromMat() method was
  broken. The regular version was not affected by this.
- ODEDynamics: Objects can now be removed from the simulation. An object that
  is part of a simulation automatically receives a new attribute "manip" which
  is its body manipulator. The manipulator has a new attribute "odegeoms" to
  access the underlying collision geometry. When setting forces, torques, etc
  on objects, the objects are automatically enabled again if they were disabled.
  Objects without a mass get a default mass of 1.0. The material setting in
  collision events now always has a well-defined order. New joint object
  ODEFixedJoint. (patch 2983970)
- eventmanager: Disconnecting/connecting event handlers while an event was handled
  could result in handlers not being called (patch 2983964).
- GLRenderer: OpenGL errors could leak through into Python and produce exceptions
  on unrelated PyOpenGL calls. The error flag is now cleared at the end of
  the C++ rendering code (bug #2974422).
- sequence: Bugfix: Sequences with only one single file didn't get handled properly